<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">The Key</string>
    <string name="jobs">Jobs</string>
    <string name="get_copoun">Get Coupon</string>
    <string name="egy_key">Egy-Key</string>
    <string name="offers">Offers</string>
    <string name="home">Home</string>
    <string name="phoneNumber_error">Phone Number is required</string>
    <string name="phone_inavlid">phone inavlid</string>
    <string name="email_error">Email is required</string>
    <string name="email_inavlid">Email inavlid</string>
    <string name="password_error">password is required</string>
    <string name="name_error">Name Is Required</string>
    <string name="phone_error">Phone is Required</string>
    <string name="address_error">Address is Required</string>
    <string name="confirm_error">Confirm Password is Required</string>
    <string name="img_error">Image is Required</string>
    <string name="Password_does_not_match">Password does not match</string>
    <string name="account_created_successfully">Your Account Created Successfully</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="views">Views</string>
    <string name="calls">Calls</string>
    <string name="fav">Favourites</string>
    <string name="share">Share</string>
    <string name="our_branches">Our branches</string>
    <string name="latest_news">Latest News</string>
    <string name="amemities">Available Services</string>
    <string name="conditioning">Conditioning</string>
    <string name="wifi">Wi-Fi</string>
    <string name="delivery">Delivery</string>
    <string name="parking">Parking</string>
    <string name="food_area">Food Area</string>
    <string name="animals">Escort Animals</string>
    <string name="kids">Kids Area</string>
    <string name="contact">Contact</string>
    <string name="gym">Gym</string>
    <string name="online_payment">Online Payment</string>
    <string name="about">About</string>
    <string name="offer">Offer</string>
    <string name="offer_coupon">خصم 50% على اى طلب</string>
    <string name="experience_level">Experience Level</string>
    <string name="education_level">Education Level</string>
    <string name="employment_type">Employment Type</string>
    <string name="salary">Salary</string>
    <string name="apply">Apply</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone_num">Mobile No.</string>
    <string name="city">City</string>
    <string name="education_qualifications">Educational Qualification</string>
    <string name="choose_file">Choose File</string>
    <string name="certificate_and_courses">Certificates and Courses</string>
    <string name="call">Call</string>
    <string name="selected_city">Selected City</string>
    <string name="selected_your_years_of">Select your years of experience</string>
    <string name="year">Year/s</string>
    <string name="ok">Ok</string>
    <string name="default_error">Something happened wrong</string>
    <string name="pls_check_connection">Please Check Your Internet Connection And Try Again</string>
    <string name="error_while_calling_this_num">Check num. and try again .</string>
    <string name="social_links">Social Links :</string>
    <string name="selected_phone_number">Select phone number</string>
    <string name="pound">EGP</string>
    <string name="cv">CV</string>
    <string name="not_available">Not available</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>
    <string name="invalid_link">Link is invalid</string>
    <string name="there_is_no">There\'s no avaiable branches</string>
    <string name="since">Since</string>
    <string name="all_day">24 hours</string>
    <string name="there_is_no_avaiable">There\'s no aviable services</string>
    <string name="old_age">Old Age</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>Forgot Password ?</u></string>
    <string name="or">OR</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="alreadt_had_account"><u>Already had account ?</u></string>
    <string name="do_not_have_an_account"><u>Do not have an account ?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_pass_desc">We just need your registered Phone to send your password reset instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="verfiy_phone">Verfication</string>
    <string name="verify_desc">Please enter the code sent to your phone number</string>
    <string name="continuee">Continue</string>
    <string name="sort_by">Sort By</string>
    <string name="near_by">Nearby</string>
    <string name="rating">Rating</string>
    <string name="done">Done</string>
    <string name="restaurant_name">Write Restaurant Name here</string>
    <string name="there_is_no_avaiable_num">There is no available numbers</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms_and_conditionss">Terms And Condition</string>
    <string name="complaints_and_suggestions">Complaints and Suggestion</string>
    <string name="about_us">About Us</string>
    <string name="notifications">Notifications</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="choose_nearest_branch">Choose Nearest Branch</string>
    <string name="there_is_no_avaiable_menu">There is no available prices show</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="beauty">Beauty</string>
    <string name="write_here">What are you looking for ?</string>
    <string name="there_no_data">There\'s no data to show</string>
    <string name="scratch_to_get_code">Scratch to get code</string>
    <string name="donee">Done !</string>
    <string name="clinic">Clinic</string>
    <string name="rest">Restaurant</string>
    <string name="hotels">Hotels</string>
    <string name="tourism">Tourism</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="market">Market</string>
    <string name="genral_service">General Service</string>
    <string name="select_size">Select Size</string>
    <string name="extras">Extras</string>
    <string name="special_ins">Special Instructions</string>
    <string name="write_instructions_here">Write instructions here</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="order_details">Order Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="go_to_checkout">Go To Checkout</string>
    <string name="save">Save</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="flooor">Floor</string>
    <string name="builidng_num">Building #</string>
    <string name="street_name">Street Name</string>
    <string name="district">District</string>
    <string name="phone">Phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="main_info">Main Information</string>
    <string name="checkout">Checkout</string>
    <string name="support">Support</string>
    <string name="your_order_from">Your Order From</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="item">Item/s</string>
    <string name="special">Special</string>
    <string name="place_order">Place Order</string>
    <string name="should_be_de">Should be delivered</string>
    <string name="placed">Placed</string>
    <string name="accepted">Acceted</string>
    <string name="deliverd">Delivered</string>
    <string name="edt_delivery_time">Est. delivery time</string>
    <string name="order_num">Order No.</string>
    <string name="view_on_map">View on map</string>
    <string name="view_order">View order</string>
    <string name="current_orders">Current Orders</string>
    <string name="pervious_orders">Pervious Orders</string>
    <string name="view_details">View Details</string>
    <string name="egp">EGP</string>
    <string name="total_price">Total Price</string>
    <string name="there_is_no_desc">There is no instructions</string>
    <string name="remove">Remove</string>
    <string name="my_basket">My Basket</string>
    <string name="are_your_sure">All orders will be deleted !</string>
    <string name="are_your_sure_item">This order will be deleted !</string>
    <string name="edit">Edit</string>
    <string name="you_added_order_beofre">All your previous orders will be deleted , case you want to add new order from different restaurant</string>
    <string name="please_choose_meal_size_first">Please choose meal size first</string>
    <string name="no_extras">With no extras</string>
    <string name="you_order_was">Your order was</string>
    <string name="tickets">Tickets</string>
    <string name="markets">Markets</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Email_Invalid">Email Invalid</string>
    <string name="mobile_length">Phone Length</string>
    <string name="Not_Found">Not Found</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="Account_Not_Verified">Account Not Verified</string>
    <string name="password_length">password_length</string>
    <string name="failed_to_upload_image">Failed To Upload Image</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id" translatable="false">3811006392244574</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb3811006392244574</string>
    <string name="profile">profile</string>
    <string name="failed_to_create_user">Failed To Create User</string>
    <string name="wrong_verification_code">Wrong Verification Code</string>
    <string name="user_already_exist">User Already Exist</string>
    <string name="mobile_already_exist">Mobile Already Exist</string>
    <string name="user_not_found">User Not Found</string>
    <string name="coupon_not_started">Coupon Not Started</string>
    <string name="coupon_finished">Coupon Finished</string>
    <string name="coupon_reached_limit">coupon reached limit</string>
    <string name="User_Reached_Coupon_Limit">"User Reached Coupon Limit "</string>
    <string name="email_already_exist">Email Already Exist</string>
    <string name="account_already_verified">Account Already  Verified</string>
    <string name="builidng_error">Building Required</string>
    <string name="floor_error">Floor Error</string>
    <string name="apartment_error">Apartment Error</string>
    <string name="city_not_found">City Not Found</string>
    <string name="Restaurant_not_found">Restaurant Not Found</string>
    <string name="Extra_not_found">Extra Not Found</string>
    <string name="Size_not_found">Size Not Found</string>
    <string name="Items_Size_not_found">Items Size Not Found</string>
    <string name="Invaild_token_please_relogin">Invaild Token Please Relogin</string>
    <string name="ExperienceYearsRequired">Experience Years Required</string>
    <string name="Cv_Required">CV Required</string>
</resources>