<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.beforeHome.SignInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/before_home_bg" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_40sdp"
                android:src="@drawable/egy_key_logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/Theme.App.Base" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/pdlg_color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:drawableStart="@drawable/ic_lock_white"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/Theme.App.Base" />

            </com.google.android.material.textfield.TextInputLayout>


            <apps.pixel.al.egykey.utilities.CairoBoldButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/ic_shape_gradient_gold"
                android:text="@string/login"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_14ssp" />


            <apps.pixel.al.egykey.utilities.CairoRegularTextView
                android:id="@+id/txt_forgt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_14ssp" />

            <apps.pixel.al.egykey.utilities.CairoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_14ssp" />


            <apps.pixel.al.egykey.utilities.CairoRegularTextView
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_14ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>