<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.relatedToBasket.AddressActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_60sdp">


            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_left_arrow" />

                <apps.pixel.the.key.utilities.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@id/close"
                    android:gravity="center"
                    android:text="@string/enter_address"
                    android:textColor="@color/default_text_color"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@color/light_accent"
                android:padding="@dimen/_8sdp">

                <apps.pixel.the.key.utilities.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/main_info"
                    android:textColor="@color/default_text_color" />


            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColorHint="@color/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="start|center"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/default_text_color"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColorHint="@color/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="start|center"
                    android:hint="@string/district"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/default_text_color"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColorHint="@color/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="start|center"
                    android:hint="@string/street_name"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/default_text_color"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="start|center"
                        android:hint="@string/builidng_num"
                        android:inputType="text"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_9sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textAllCaps="true"
                        android:textColor="@color/default_text_color"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="start|center"
                        android:hint="@string/flooor"
                        android:inputType="number"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_9sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textAllCaps="true"
                        android:textColor="@color/default_text_color"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="start|center"
                        android:hint="@string/neighborhood"
                        android:inputType="text"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_9sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textAllCaps="true"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:gravity="end"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">


        <apps.pixel.the.key.utilities.CairoRegularTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


        <apps.pixel.the.key.utilities.CairoRegularTextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>