<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.beforeHome.ForgetPasswordActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="fitXY"
        android:src="@drawable/before_home_bg" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical">


            <apps.pixel.al.egykey.utilities.CairoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_20ssp" />


            <apps.pixel.al.egykey.utilities.CairoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/forgot_pass_desc"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_12ssp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_9sdp"
                    android:gravity="start|center"
                    android:hint="@string/phone_num"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/Theme.App.Base" />

            </com.google.android.material.textfield.TextInputLayout>


            <apps.pixel.al.egykey.utilities.CairoBoldButton
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/ic_shape_gradient_gold"
                android:text="@string/reset_password"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_12ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>